:bug: fix negative margin broken layout

--- a/src/components/setting/setting.css
+++ b/src/components/setting/setting.css
@@ -145,6 +145,7 @@
     display: flex;
     left: -100%;
     transition: all linear 300ms;
+    margin: 0;
 
     &.active {
       left: 0;
